--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "parchment": "^2.0.0",
+    "quill-delta": "^5.0.0",
+    "eventemitter3": "^4.0.0",
   },
   "scripts": {
     "start": "react-scripts start",
