--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.1",
+    "eventemitter3": "^4.0.0",
     "lodash": "^4.17.21",
+    "parchment": "^2.0.0",
+    "quill-delta": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4",
-    "parchment": "^2.0.0",
-    "quill-delta": "^5.0.0",
-    "eventemitter3": "^4.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/quill": "^1.3.10"
   }
 }
