--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@types/quill": "^1.3.10"
+    "@types/quill": "^1.3.10",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "react-app-rewired": "^2.2.1",
+    "svg-inline-loader": "^0.8.2"
   }
 }
